# wifi-over-ir

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  Readme.md  serve-files.sh
assets/: banner-256x128.xcf  gateway-cia.rsf
client/: CMakeLists.txt  CMakePresets.json
client/src/: main.c
cmake/: 3DS-Tools.cmake  Findlog_h.cmake
cmake/presets/: base.json  devkitpro.json  watcom.json
common/: CMakeLists.txt
common/includes/woi/hal/: ir.h
common/src/hal/dos/: ir.c
gateway/: CMakeLists.txt
gateway/src/: main.c
includes/woi/: platform.h  result.h
protocol/: CMakeLists.txt
src/: client.h  gateway.h  log.h  main.c  result.c
src/platform/: 3ds-init.c  dos-init.c
src/platform-3ds/: main.c
src/platform-dos/: main.c
src/platform/3ds/: init.c
src/platform/dos/: hornet.c  init.c
